--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # Binaries for programs and plugins
+*.log
 *.exe
 *.dll
 *.so
 *.dylib
 *.pyc
+venv/*
 
 # Test binary, build with `go test -c`
 *.test
@@ -13,11 +15,23 @@
 
 # IDE
 debug
+builds/*
 .idea/
-.vscode/
-
-/bin
-tmp/*
 vendor/*
-build/*
-coverage.*
+
+.env
+.env.dev
+!.env.ci
+service-account-key.json
+
+# Helm
+**/charts/*.tgz
+
+# Python
+__pycache__
+.cache/
+.venv/
+.pytest_cache
+
+# tests
+tests/reports
